# vc-clipper

./: .env.example  .gitignore  CLAUDE.md  README.md  app.py  build_exe.bat  clipfinder.spec  main.py  pyproject.toml  requirements.txt  setup_and_run.bat  setup_and_run.sh
.github/workflows/: build-windows.yml  build.yml
